# music_store_analytics_agent

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
datasets/chinook/album/: schema.yaml
datasets/chinook/artist/: schema.yaml
datasets/chinook/customer/: schema.yaml
datasets/chinook/employee/: schema.yaml
datasets/chinook/genre/: schema.yaml
datasets/chinook/invoice/: schema.yaml
datasets/chinook/invoice-line/: schema.yaml
datasets/chinook/media-type/: schema.yaml
datasets/chinook/music-analytics/: schema.yaml
datasets/chinook/playlist/: schema.yaml
datasets/chinook/playlist-track/: schema.yaml
datasets/chinook/track/: schema.yaml
slackbot_agent/: main.py
slackbot_agent/engine/: __init__.py  engine.py  orchestrator.py  planner.py  reasoner.py
slackbot_agent/intake/: __init__.py  context_resolver.py  guardrails.py  help.py  help_response.txt  validator.py
slackbot_agent/memory/: __init__.py  store.py
slackbot_agent/output/: __init__.py  response_builder.py
slackbot_agent/semantic_layer/: __init__.py  semantic_layer.py
